--- a/extras/index.html
+++ b/extras/index.html
@@ -21,7 +21,7 @@ function smash2(code) {
 
 console.log(JSON.stringify(smash("a = 2")))
 
-
+console.log(CoffeeScript.compile("__metabeta__ = true; a = 1; a[b]; a.b; p.c(1, 2, \"fifty\", five)"))
 </script>
 </body>
 </html>
